Changed Elasticsearch to avoid conflicts

--- a/zurmo_elasticsearch/fleet/zurmo_elasticsearch@.service
+++ b/zurmo_elasticsearch/fleet/zurmo_elasticsearch@.service
@@ -21,3 +21,4 @@ ExecStop=/usr/bin/docker stop zurmo_elasticsearch.%i
 
 [X-Fleet]
 Conflicts=zurmo_elasticsearch@*.service
+Conflicts=zurmo_logstash@*.service
