--- a/zurmo_mysql_cluster/fleet/zurmo_mysql@.service
+++ b/zurmo_mysql_cluster/fleet/zurmo_mysql@.service
@@ -15,5 +15,5 @@ Restart=always
 ExecStartPre=-/usr/bin/docker kill zurmo_mysql.%i
 ExecStartPre=-/usr/bin/docker rm zurmo_mysql.%i
 #ExecStartPre=/usr/bin/docker pull icclabcna/zurmo_mysql:${DOCKER_IMAGE_TAG}
-ExecStart=/usr/bin/docker run --name zurmo_mysql.%i -p %i:3306 icclabcna/zurmo_mysql:${DOCKER_IMAGE_TAG}
+ExecStart=/usr/bin/docker run --name zurmo_mysql.%i -p %i:3306 oezs/zurmo_mysql_cluster:${DOCKER_IMAGE_TAG} -e "isPC=true"
 ExecStop=/usr/bin/docker stop zurmo_mysql.%i
