--- a/zurmo_mysql_cluster/fleet/zurmo_mysql_nodes@.service
+++ b/zurmo_mysql_cluster/fleet/zurmo_mysql_nodes@.service
@@ -14,6 +14,6 @@ KillMode=none
 Restart=always
 ExecStartPre=-/usr/bin/docker kill zurmo_mysql.%i
 ExecStartPre=-/usr/bin/docker rm zurmo_mysql.%i
-#ExecStartPre=/usr/bin/docker pull icclabcna/zurmo_mysql:${DOCKER_IMAGE_TAG}
-ExecStart=/usr/bin/docker run --name zurmo_mysql.%i -p %i:3306 icclabcna/zurmo_mysql:${DOCKER_IMAGE_TAG}
+#ExecStartPre=/usr/bin/docker pull oezs/zurmo_mysql:${DOCKER_IMAGE_TAG}
+ExecStart=/usr/bin/docker run --name zurmo_mysql.%i -p %i:3306 oezs/zurmo_mysq_clusterl:${DOCKER_IMAGE_TAG}
 ExecStop=/usr/bin/docker stop zurmo_mysql.%i
